(chores) camel-api: use unmodifiable list when possible